# xiaozhi-melotts-service

./: README.md  install_systemd.sh  main.py  pyproject.toml  test_client.py
melotts_service/: __init__.py  api.py  config.py  core.py  schemas.py
melotts_service/static/: index.html
